--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html ng-app="myapp">
 <head>
     <meta charset="utf-8" />
-    <!--<meta name="format-detection" content="telephone=no" />-->
+    <meta name="format-detection" content="telephone=no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />-->
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
     <title>AudioHook</title>
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" href="includes/css/stylesheets/style.css" />
     <!--<link rel="stylesheet" type="text/css" href="includes/css/stylesheets/flaticon.css">-->
     <script data-require="angular.js@1.0.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js" data-semver="1.0.7"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type='application/javascript' src='includes/javascript/ftlabs-fastclick-a22efe3/lib/fastclick.js'></script>
+    <script src="includes/javascript/javascript.js"></script>
     <script src="includes/javascript/app.js"></script>
+    <script src="includes/javascript/splash-screen.js"></script>
+    <script src="includes/javascript/intro.js"></script>
 </head>
 <body>
-<section class="wrapper">
-    hello
-</section>
+<section ng-view style="width: 100%; height: 100%;"></section>
 </body>
 </html>
