--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="includes/javascript/app.js"></script>
     <script src="includes/javascript/splash-screen.js"></script>
     <script src="includes/javascript/intro.js"></script>
+    <script src="includes/javascript/browse.js"></script>
+    <script src="includes/javascript/services.js"></script>
 </head>
 <body>
 <section ng-view style="width: 100%; height: 100%;"></section>
