--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>AudioHook</title>
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" href="includes/css/stylesheets/style.css" />
+    <link rel="stylesheet" href="includes/css/stylesheets/flaticon.css" />
     <!--<link rel="stylesheet" type="text/css" href="includes/css/stylesheets/flaticon.css">-->
     <script data-require="angular.js@1.0.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.js" data-semver="1.0.7"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
