--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="includes/javascript/intro.js"></script>
     <script src="includes/javascript/browse.js"></script>
     <script src="includes/javascript/services.js"></script>
+    <script src="includes/javascript/search.js"></script>
 </head>
 <body>
 <section ng-view style="width: 100%; height: 100%;"></section>
