--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="includes/javascript/services.js"></script>
     <script src="includes/javascript/search.js"></script>
     <script src="includes/javascript/filters.js"></script>
+    <script src="includes/javascript/book-info.js"></script>
+    <script src="includes/javascript/share.js"></script>
 </head>
 <body>
 <section ng-view style="width: 100%; height: 100%;"></section>
